Adding new information

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,10 @@ Porque en esta versión todo girará al rededor de la pregunta: ¿Qué habilidad
         \u0009 &#8226; Fecha: Sábado 3 de Agosto de 2019.\n
         \u0009 &#8226; Lugar: Centro Cultural Roberto Cantoral.\n
         \u0009 &#8226; Dirección: Puente Xoco s/n, Xoco, 03330 Ciudad de México, CDMX.</string>
+    <string name="library_description_1">
+        \u0009 &#8226; Es un evento exclusivo para estudiantes con suscripción activa en Platzi.\n
+        \u0009 &#8226; (Sí esto te apasiona y no tienes una suscripción activa, adquiere ya mismo tu Plan Expert).\n
+        \u0009 &#8226; Fecha: Sábado 3 de Agosto de 2019.\n
+        \u0009 &#8226; Lugar: Centro Cultural Roberto Cantoral.\n
+        \u0009 &#8226; Aspectos Sustantivos del Estatuto General de la Contratación Pública.</string>
 </resources>
